Bug 312287 Cannot open local htm file if its path has non-ASCII character / Cannot open IDN from command line r=jshin, sr=neil